FREEMARKER-135 Support user-supplied names for datasources (#7)
* FREEMARKER-135 Support user-supplied names for datasources

* FREEMARKER-135 Support user-supplied names for datasources