@@ -17,8 +17,11 @@
 package org.apache.freemarker.generator.base.datasource;
 
 import org.apache.freemarker.generator.base.file.RecursiveFileSupplier;
+import org.apache.freemarker.generator.base.uri.NamedUri;
+import org.apache.freemarker.generator.base.uri.NamedUriParser;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.Charset;
 import java.util.ArrayList;
@@ -26,9 +29,11 @@ import java.util.Collection;
 import java.util.List;
 import java.util.function.Supplier;
 
+import static java.nio.charset.StandardCharsets.UTF_8;
 import static java.util.Collections.singletonList;
 import static java.util.Objects.requireNonNull;
 import static java.util.stream.Collectors.toList;
+import static org.apache.freemarker.generator.base.FreeMarkerConstants.DEFAULT_GROUP;
 
 /**
  * Create a list of <code>Datasource</code> based on a list of sources consisting of
@@ -71,20 +76,34 @@ public class DatasourcesSupplier implements Supplier<List<Datasource>> {
     }
 
     private List<Datasource> get(String source) {
-        if (isHttpUrl(source)) {
-            return singletonList(resolveHttpUrl(source));
-        } else {
-            return resolveFile(source, include, exclude, charset);
+        try {
+            if (isHttpUrl(source)) {
+                return singletonList(resolveHttpUrl(source));
+            } else {
+                return resolveFile(source, include, exclude, charset);
+            }
+        } catch (RuntimeException e) {
+            throw new RuntimeException("Unable to create the datasource: " + source, e);
         }
     }
 
-    private static Datasource resolveHttpUrl(String url) {
-        return DatasourceFactory.create(toUrl(url));
+    private static Datasource resolveHttpUrl(String source) {
+        final NamedUri namedUri = NamedUriParser.parse(source);
+        final URI uri = namedUri.getUri();
+        final String name = getNameOrElse(namedUri, uri.toString());
+        final String group = getGroupOrElse(namedUri, DEFAULT_GROUP);
+        final Charset currCharset = getCharsetOrElse(namedUri, UTF_8);
+        return DatasourceFactory.create(name, group, toUrl(uri), currCharset);
     }
 
     private static List<Datasource> resolveFile(String source, String include, String exclude, Charset charset) {
-        return fileResolver(source, include, exclude).get().stream()
-                .map(file -> DatasourceFactory.create(file, charset))
+        final NamedUri namedUri = NamedUriParser.parse(source);
+        final String path = namedUri.getUri().getPath();
+        final String name = getNameOrElse(namedUri, path);
+        final String group = getGroupOrElse(namedUri, DEFAULT_GROUP);
+        final Charset currCharset = getCharsetOrElse(namedUri, charset);
+        return fileResolver(path, include, exclude).get().stream()
+                .map(file -> DatasourceFactory.create(name, group, file, currCharset))
                 .collect(toList());
     }
 
@@ -93,14 +112,27 @@ public class DatasourcesSupplier implements Supplier<List<Datasource>> {
     }
 
     private static boolean isHttpUrl(String value) {
-        return value.startsWith("http://") || value.startsWith("https://");
+        return value.contains("http://") || value.contains("https://");
     }
 
-    private static URL toUrl(String value) {
+    private static URL toUrl(URI uri) {
         try {
-            return new URL(value);
+            return uri.toURL();
         } catch (MalformedURLException e) {
-            throw new IllegalArgumentException(value, e);
+            throw new IllegalArgumentException(uri.toString(), e);
         }
     }
+
+    private static Charset getCharsetOrElse(NamedUri namedUri, Charset def) {
+        return Charset.forName(namedUri.getParameters().getOrDefault("charset", def.name()));
+    }
+
+    private static String getNameOrElse(NamedUri namedUri, String def) {
+        return namedUri.hasName() ? namedUri.getName() : def;
+    }
+
+    private static String getGroupOrElse(NamedUri namedUri, String def) {
+        return namedUri.hasGroup() ? namedUri.getGroup() : def;
+    }
+
 }
